urpc/internal/core/analysis/testdata/errors/cycles/direct_cycle.ufo
// @expect: E601

type Node {
	child: Node
}
